# ovito

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.md  README.md  README.txt
src/core/: CMakeLists.txt  Core.h  ForwardDecl.h
src/core/animation/: AnimationSettings.cpp  AnimationSettings.h  TimeInterval.h
src/core/app/: Application.cpp  Application.h  StandaloneApplication.cpp  StandaloneApplication.h
src/core/dataset/: DataSet.cpp  DataSet.h  DataSetContainer.cpp  DataSetContainer.h  UndoStack.cpp  UndoStack.h
src/core/object/: NativeOvitoObjectType.cpp  NativeOvitoObjectType.h  OvitoObject.h  OvitoObjectReference.h  OvitoObjectType.cpp  OvitoObjectType.h
src/core/plugins/: NativePlugin.cpp  NativePlugin.h  Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h
src/core/reference/: CloneHelper.cpp  CloneHelper.h  NativePropertyFieldDescriptor.h  PropertyField.cpp  PropertyField.h  PropertyFieldDescriptor.cpp  PropertyFieldDescriptor.h  RefMaker.cpp  RefMaker.h  RefTarget.cpp  RefTarget.h  RefTargetListener.cpp  RefTargetListener.h  ReferenceEvent.h
src/core/rendering/: ArrowPrimitive.h  FrameBuffer.h  ImagePrimitive.h  LinePrimitive.h  MarkerPrimitive.h  MeshPrimitive.h  ParticlePrimitive.h  PrimitiveBase.h  RenderSettings.cpp  RenderSettings.h  RenderSettingsEditor.cpp  SceneRenderer.cpp  SceneRenderer.h  TextPrimitive.h
src/core/resources/: core.qrc
src/core/scene/: ObjectNode.cpp  ObjectNode.h  SceneNode.cpp  SceneNode.h  SceneRoot.cpp  SceneRoot.h  SelectionSet.cpp  SelectionSet.h
src/core/utilities/: BoundedPriorityQueue.h  Color.h  Debugging.h  DeferredMethodInvocation.h  Exception.cpp  Exception.h  FloatType.h  MemoryPool.h
src/core/viewport/: Viewport.cpp  Viewport.h  ViewportConfiguration.cpp  ViewportConfiguration.h  ViewportSettings.cpp  ViewportSettings.h  ViewportWindow.cpp  ViewportWindow.h  ViewportWindowInterface.h
src/gui/: CMakeLists.txt  ForwardDecl.h  GUI.cpp  GUI.h
src/gui/actions/: ActionManager.cpp  ActionManager.h  AnimationActions.cpp  FileActions.cpp  RenderActions.cpp  ViewportActions.cpp  ViewportModeAction.cpp  ViewportModeAction.h
src/gui/app/: Application.cpp  GuiApplication.cpp  GuiApplication.h
src/gui/dataset/: DataSet.cpp  DataSet.h  DataSetContainer.cpp  GuiDataSetContainer.cpp  GuiDataSetContainer.h
src/gui/dialogs/: AdjustCameraDialog.cpp  AdjustCameraDialog.h  AnimationKeyEditorDialog.cpp  AnimationKeyEditorDialog.h  AnimationSettingsDialog.cpp  AnimationSettingsDialog.h  ApplicationSettingsDialog.cpp  ApplicationSettingsDialog.h  FileExporterSettingsDialog.cpp  FileExporterSettingsDialog.h  GeneralSettingsPage.cpp  GeneralSettingsPage.h  HistoryFileDialog.cpp  HistoryFileDialog.h  ImportFileDialog.cpp  ImportFileDialog.h  ImportRemoteFileDialog.cpp  ImportRemoteFileDialog.h  LoadImageFileDialog.cpp  LoadImageFileDialog.h  RemoteAuthenticationDialog.cpp  RemoteAuthenticationDialog.h  SaveImageFileDialog.cpp  SaveImageFileDialog.h  ViewportSettingsPage.cpp  ViewportSettingsPage.h
src/gui/mainwin/: MainWindow.cpp  MainWindow.h  TaskDisplayWidget.cpp  TaskDisplayWidget.h  TaskManager.h  ViewportsPanel.cpp  ViewportsPanel.h
src/gui/properties/: AffineTransformationParameterUI.cpp  AffineTransformationParameterUI.h  BooleanActionParameterUI.cpp  BooleanActionParameterUI.h  BooleanGroupBoxParameterUI.cpp  BooleanGroupBoxParameterUI.h  BooleanParameterUI.cpp  BooleanParameterUI.h  BooleanRadioButtonParameterUI.cpp  BooleanRadioButtonParameterUI.h  ColorParameterUI.cpp  ColorParameterUI.h  CustomParameterUI.cpp  CustomParameterUI.h  FilenameParameterUI.cpp  FilenameParameterUI.h  FloatParameterUI.cpp  FloatParameterUI.h  FontParameterUI.cpp  FontParameterUI.h  IntegerParameterUI.cpp  IntegerParameterUI.h  IntegerRadioButtonParameterUI.cpp  IntegerRadioButtonParameterUI.h  NumericalParameterUI.cpp  NumericalParameterUI.h  ParameterUI.cpp  ParameterUI.h  PropertiesEditor.cpp  PropertiesEditor.h  PropertiesPanel.cpp  PropertiesPanel.h  RefTargetListParameterUI.cpp  RefTargetListParameterUI.h  StringParameterUI.cpp  StringParameterUI.h  SubObjectParameterUI.cpp  SubObjectParameterUI.h  VariantComboBoxParameterUI.cpp  VariantComboBoxParameterUI.h  (+2 more)
src/gui/rendering/: OpenGLArrowPrimitive.cpp  OpenGLArrowPrimitive.h  OpenGLBuffer.h  OpenGLHelpers.h  OpenGLImagePrimitive.cpp  OpenGLImagePrimitive.h  OpenGLLinePrimitive.cpp  OpenGLLinePrimitive.h  OpenGLMeshPrimitive.cpp  OpenGLMeshPrimitive.h  OpenGLParticlePrimitive.cpp  OpenGLParticlePrimitive.h  OpenGLSceneRenderer.cpp  OpenGLSceneRenderer.h  OpenGLSharedResource.cpp  OpenGLSharedResource.h  OpenGLTextPrimitive.cpp  OpenGLTextPrimitive.h  OpenGLTexture.h  RenderSettingsEditor.cpp  RenderSettingsEditor.h  StandardSceneRenderer.cpp  StandardSceneRenderer.h  StandardSceneRendererEditor.cpp  StandardSceneRendererEditor.h  ViewportSceneRenderer.cpp  ViewportSceneRenderer.h
src/gui/resources/: PluginManifest.json  gui.qrc
src/gui/utilities/: Color.h
src/gui/viewport/: Viewport.h  ViewportMenu.cpp  ViewportMenu.h  ViewportWindow.cpp  ViewportWindow.h
src/main/: CMakeLists.txt  Main.cpp
src/main/resources/: Info.plist  appxmanifest.xml
src/opengl_renderer/: CMakeLists.txt  OpenGLArrowPrimitive.cpp  OpenGLArrowPrimitive.h  OpenGLBuffer.h  OpenGLHelpers.h  OpenGLImagePrimitive.cpp  OpenGLImagePrimitive.h  OpenGLLinePrimitive.cpp  OpenGLLinePrimitive.h  OpenGLMarkerPrimitive.cpp  OpenGLMarkerPrimitive.h  OpenGLMeshPrimitive.cpp  OpenGLMeshPrimitive.h  OpenGLParticlePrimitive.cpp  OpenGLParticlePrimitive.h  OpenGLSceneRenderer.cpp  OpenGLSceneRenderer.h  OpenGLSharedResource.cpp  OpenGLSharedResource.h  OpenGLTextPrimitive.cpp  OpenGLTextPrimitive.h  OpenGLTexture.h  StandardSceneRenderer.cpp  StandardSceneRenderer.h
src/opengl_renderer/gui/: CMakeLists.txt  StandardSceneRendererEditor.cpp  StandardSceneRendererEditor.h
src/opengl_renderer/resources/: PluginManifest.json  resources.qrc
src/plugins/: CMakeLists.txt
src/plugins/correlation/: CMakeLists.txt  CorrelationFunctionModifier.cpp  CorrelationFunctionModifier.h
(+1183 files in other folders)
